[package]
description = "Advanced Navigation Packet Protocol library for Boreas D90 connectivity"
edition = "2021"
name = "liban"
version = "0.1.0"

[dependencies]
bincode = "1.3.3"
bitflags = { version = "2.4", features = ["serde"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["io-util", "net", "time", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "boreas_interface"
required-features = []
