[package]
description = "Advanced Navigation Packet Protocol library for Boreas D90 connectivity"
edition = "2021"
name = "liban"
version = "0.2.5"

[dependencies]
binrw = "0.13"
bitflags = "2.4"
bytes = "1.5"
crc = "3.0"
paste = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["io-util", "net", "time", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "boreas_interface"
required-features = []
