[package]
description = "A library to parse Advanced Navigation Packet Protocol messages"
edition = "2024"
name = "liban"
version = "0.4.0"
license = "MPL-2.0"
homepage = "https://github.com/saronic-technologies/liban-rs"
repository = "https://github.com/saronic-technologies/liban-rs"
readme = "README.md"

[dependencies]
binrw = "0.15"
bitflags = { version = "2.4", features = ["serde"] }
crc = "3.0"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
